[package]
name = "zisk-eth-client-wasm"
version = "0.1.0"
authors = ["agnusmor <agnusmor@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-file-reader = "1.0.0"
bincode = "1.3.3"
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git"}
rsp-client-executor = { git = "https://github.com/agnusmor/zisk-rsp-patch.git" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# Allows us to access browser elements like the console via Rust
# https://docs.rs/web-sys/latest/web_sys/
[dependencies.web-sys]
version = "0.3.60"
# Log to the browser console from Rust code
features = [ "console" ]

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
